--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests/gargoyle.spec.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/kurtpeters/gargoyle/issues"
   },
-  "homepage": "https://github.com/kurtpeters/gargoyle"
+  "homepage": "https://github.com/kurtpeters/gargoyle",
+  "devDependencies": {
+    "expect.js": "^0.3.1",
+    "gulp": "^3.8.10",
+    "gulp-concat": "^2.4.2",
+    "gulp-uglify": "^1.0.1",
+    "mocha": "^2.0.1"
+  }
 }
